--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
  
 <div class="bottomgrid">
-   <a href="https://frontendmasters.com/courses/css-projects" target="_blank"><img src="https://assets.codepen.io/296057/fem-css-projects.webp" alt="CSS projects"> </a>
+   <a href="https://nishantbhj007.github.io/Weather-App/" target="_blank"><img src="https://store-images.s-microsoft.com/image/apps.16894.c02476d2-2378-4f60-8290-b6d4b3842643.79a2ef6a-4775-4c79-8d93-9caf077660eb.1bbd88a4-0a17-4750-91a0-cd7d98f58e9d" alt="CSS projects"> </a>
    <a href="https://frontendmasters.com/courses/css-projects" target="_blank"><img src="https://assets.codepen.io/296057/fem-css-projects.webp" alt="CSS projects"> </a>
    <a href="https://frontendmasters.com/courses/css-projects" target="_blank"><img src="https://assets.codepen.io/296057/fem-css-projects.webp" alt="CSS projects"> </a>
    <a href="https://frontendmasters.com/courses/css-projects" target="_blank"><img src="https://assets.codepen.io/296057/fem-css-projects.webp" alt="CSS projects"> </a>
