--- a/index.html
+++ b/index.html
@@ -121,6 +121,21 @@
   </figure>
 
 
+   <figure>
+   <a href="https://nishantbhj007.github.io/sorting-visualizer/"target="_blank">
+   <img src="./images/visual.PNG" target="_blank"></a>
+   <figcaption>
+    <h3>Sorting Visualizer </h3>
+   <ul>
+    <li>HTML</li>
+     <li>CSS</li>
+     <li>JavaScript</li>
+    </li>
+   </ul>
+   </figcaption>
+  </figure>
+
+
  </div>
 
  
