--- a/index.html
+++ b/index.html
@@ -113,6 +113,22 @@
    </ul>
    </figcaption>
   </figure>
+
+    <figure>
+   <a href="https://nishantbhj007.github.io/Currency-Convertor/" target="_blank">
+   <img src="https://img.freepik.com/premium-vector/money-currency-exchange-money-transfer-stock-exchange-currencies-dollar-euro-pound-yen_228260-472.jpg" alt="calculator"></a>
+   <figcaption>
+    <h3>Currency Convertor App </h3>
+   <ul>
+    <li>HTML</li>
+     <li>CSS</li>
+     <li>JavaScript</li>
+    </li>
+   </ul>
+   </figcaption>
+  </figure>
+
+   
  </div>
   </div>
 </section>
