--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
    </ul>
    </figcaption>
   </figure>
+   
+   <figure>
+   <a href=" https://nishantbhj007.github.io/Image-Editor-app/" target="_blank">
+   <img src="https://www.sourcecodester.com/sites/default/files/images/razormist/image-editting-ap-using-htmlcss-in-vanillajs-2.jpg" alt="calculator"></a>
+   <figcaption>
+    <h3>Image Editor App </h3>
+   <ul>
+    <li>HTML</li>
+     <li>CSS</li>
+     <li>JavaScript</li>
+    </li>
+   </ul>
+   </figcaption>
+  </figure>
 
    
  </div>
