--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
    <figure>
    <a href="https://nishantbhj007.github.io/sorting-visualizer/"target="_blank">
-   <img src="./images/visual.PNG" target="_blank"></a>
+   <img src="./images/sorter.PNG" target="_blank"></a>
    <figcaption>
     <h3>Sorting Visualizer </h3>
    <ul>
