--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <figure>
    <a href="https://nishantbhj007.github.io/Currency-Convertor/" target="_blank">
-   <img src="https://img.freepik.com/premium-vector/money-currency-exchange-money-transfer-stock-exchange-currencies-dollar-euro-pound-yen_228260-472.jpg" alt="calculator"></a>
+   <img src="https://img.freepik.com/premium-vector/money-currency-exchange-money-transfer-stock-exchange-currencies-dollar-euro-pound-yen_228260-472.jpg" alt="currency convertor"></a>
    <figcaption>
     <h3>Currency Convertor App </h3>
    <ul>
@@ -130,7 +130,7 @@
    
    <figure>
    <a href=" https://nishantbhj007.github.io/Image-Editor-app/" target="_blank">
-   <img src="https://www.sourcecodester.com/sites/default/files/images/razormist/image-editting-ap-using-htmlcss-in-vanillajs-2.jpg" alt="calculator"></a>
+   <img src="./images/video-editor.PNG" alt="image-editor"></a>
    <figcaption>
     <h3>Image Editor App </h3>
    <ul>
