--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 <section class="section-contact">
  <div class="container">
   <h2>Contact Me</h2>
-  <p>I am always up for chalenges to strech my creativity,let's get together to make something iteresting</p>
+  <p>I am always up for challenges to strech my creativity,let's get together to make something iteresting</p>
   <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=nishantbj2020@gmail.com" class="button" target="_blank">Email me</a></p>
  </div>
 </section>
