--- a/index.html
+++ b/index.html
@@ -34,6 +34,44 @@
 </div>
 </section>
 
+<section class="section-featured">
+      <div class="container">
+        <h2>Featured Projects</h2>
+        <article>
+          
+          <img src="./images/e-com.jpg" alt="e-com" />
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <div class="blackbox">
+            <p>
+              Developed a fully functional e-commerce website with product
+              listings, shopping cart, and checkout system, using HTML, CSS, and
+              JavaScript. Designed for a responsive and user-friendly shopping
+              experience across all devices.
+            </p>
+
+            <p>
+              <a
+                href="https://nishant-store.netlify.app/"
+                target="_blank"
+                class="button"
+                >Open Site</a
+              >
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
+
+
+
+
+
+ 
+
 <section class="section-projects">
  <div class="container">
   <h2>Projects I am proud of</h2>
