--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
    
    <figure>
    <a href=" https://nishantbhj007.github.io/Image-Editor-app/" target="_blank">
-   <img src="./images/video-editor.PNG" alt="image-editor"></a>
+   <img src="./images/pe1.PNG" alt="image-editor"></a>
    <figcaption>
     <h3>Image Editor App </h3>
    <ul>
