--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </nav>
   </header>
 
-<p>Hi, my name is <span class="name">Nishant</span>
-having a passion for technology, problem-solving, and continuous learning. I thrive on the challenge of breaking down complex problems and developing elegant, efficient solutions through code. With a strong foundation in 
- <strong>JavaScript,React </strong>, I am constantly seeking opportunities to grow my skills and stay up-to-date with the latest industry trends.
+<p>Hi,I am <strong>Nishant</strong>
+having a passion for technology, problem-solving, and continuous learning. I thrive on the challenge of breaking down complex problems and solving it efficiently. With a strong foundation in 
+ <strong>JavaScript </strong>, I am constantly seeking opportunities to grow my skills and stay up-to-date with the latest industry trends.
 </p>
 
 </div>
