--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ having a passion for technology, problem-solving, and continuous learning. I thr
   </figure>
    
    <figure>
-   <a href="territory-tales.netlify.app" target="_blank">
+   <a href="https://territory-tales.netlify.app" target="_blank">
    <img src="https://media.istockphoto.com/id/184601450/photo/international-flags.jpg?s=612x612&w=0&k=20&c=b4hj7IeNH2ZXm7q8-9vw5I3RLoQhfN4NYfrCD2ZdTDk="></a>
    <figcaption>
     <h3>Territory Tales </h3>
